--- a/pdmonad.cabal
+++ b/pdmonad.cabal
@@ -23,14 +23,19 @@ extra-source-files:
     README.md
 
 executable pdmonad
-    main-is:          Main.hs
+    main-is:          PdMonad/Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Pdmonad
+    other-modules: PdMonad
+                 , PdMonad.Graphviz
+                 , PdMonad.Identifiers
+                 , PdMonad.Core
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.17.2.0
                     , text
+                    , graphviz
+                    , fgl
     hs-source-dirs:   app
     default-language: Haskell2010
