--- a/pdmonad.cabal
+++ b/pdmonad.cabal
@@ -2,7 +2,7 @@ cabal-version:      3.6
 name:               pdmonad
 version:            0.1.0.0
 
--- A short (one-line) description of the package.
+-- A short (one-line)  of the package.
 -- synopsis:
 
 -- A longer description of the package.
@@ -22,19 +22,26 @@ maintainer:         aee8d900@tutanota.com
 extra-source-files:
     README.md
 
-executable pdmonad
-    main-is:          PdMonad/Main.hs
-
+library 
     -- Modules included in this executable, other than Main.
-    other-modules: PdMonad
-                 , PdMonad.Identifiers
-                 , PdMonad.Core
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
+    exposed-modules:  PdMonad
+                      PdMonad.Pd
+                      PdMonad.PdOps
+                      PdMonad.GraphOps
     build-depends:    base ^>=4.17.2.0
                     , text
                     , graphviz
                     , fgl
+    hs-source-dirs:   src
+    default-language: Haskell2010
+
+
+executable pdmonad
+    main-is:          Main.hs
     hs-source-dirs:   app
+    build-depends:    base ^>=4.17.2.0
+                    , pdmonad
+                    , text
+                    , graphviz
+                    , fgl
     default-language: Haskell2010
